--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,23 +2,30 @@ name: ci
 
 on:
   push:
+    branches:
+      - "main"
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PAT }}
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push
+        with:
+          driver: cloud
+          endpoint: "anzerwall/lingkit"
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          push: true
-          tags: anzerwall/lingkit:latest
+          tags: "${{ vars.DOCKER_USER }}/docker-build-cloud-demo:latest"
+          # For pull requests, export results to the build cache.
+          # Otherwise, push to a registry.
+          outputs: ${{ github.event_name == 'pull_request' && 'type=cacheonly' || 'type=registry' }}
+  
